--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@popperjs/core": "^2.11.6",
     "accordion-js": "^3.3.2",
     "apexcharts": "^3.36.3",
+    "axios": "^1.3.4",
     "cleave.js": "^1.6.0",
     "dayjs": "^1.11.7",
     "filepond": "^4.30.4",
@@ -31,6 +32,7 @@
     "toastify-js": "^1.12.0",
     "tom-select": "^2.2.2",
     "vue": "^3.2.45",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
